force-app/main/default/objects/Line_Of_Billing__c/Line_Of_Billing__c.object-meta.xml
<CustomObject>
    <label>Line Of Billing</label>
    <nameField>
        <label>Line Of Billing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lines Of Billing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>