force-app/main/default/objects/Line_Of_Billing__c/fields/Billing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Billing_Unit__c</fullName>
    <label>Billing Unit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>