force-app/main/default/objects/Line_Of_Billing__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <label>Commission</label>
    <length>20</length>
    <type>Text</type>
</CustomField>