force-app/main/default/objects/Line_Of_Billing__c/fields/Current_YTD_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_YTD_Revenue__c</fullName>
    <formula>IF(AND(MONTH(TODAY())=1,YEAR( Invoice_Date__c ) = YEAR(TODAY())), Total_Revenue__c , IF(AND(YEAR( Invoice_Date__c  ) = YEAR(TODAY()),MONTH(Invoice_Date__c )&gt; 1), Total_Revenue__c ,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current YTD Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>