force-app/main/default/objects/Line_Of_Billing__c/fields/Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO__c</fullName>
    <label>Customer PO</label>
    <length>18</length>
    <type>Text</type>
</CustomField>