force-app/main/default/objects/Line_Of_Billing__c/fields/DB_Week_Number__c.field-meta.xml
<CustomField>
    <fullName>DB_Week_Number__c</fullName>
    <label>DB Week Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>