force-app/main/default/objects/Line_Of_Billing__c/fields/DS_Network_Code__c.field-meta.xml
<CustomField>
    <fullName>DS_Network_Code__c</fullName>
    <label>DS Network Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>