force-app/main/default/objects/Line_Of_Billing__c/fields/Invoice_Territory__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Territory__c</fullName>
    <label>Invoice Territory</label>
    <length>10</length>
    <type>Text</type>
</CustomField>