force-app/main/default/objects/Line_Of_Billing__c/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <label>Invoice Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>