force-app/main/default/objects/Line_Of_Billing__c/fields/Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Category__c</fullName>
    <label>Item Category</label>
    <length>10</length>
    <type>Text</type>
</CustomField>