force-app/main/default/objects/Line_Of_Billing__c/fields/Item_Size__c.field-meta.xml
<CustomField>
    <fullName>Item_Size__c</fullName>
    <label>Item Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>