force-app/main/default/objects/Line_Of_Billing__c/fields/Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Type__c</fullName>
    <label>Line Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>