force-app/main/default/objects/Line_Of_Billing__c/fields/LOB_SFDC_ID__c.field-meta.xml
<CustomField>
    <fullName>LOB_SFDC_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>LOB SFDC ID</label>
    <type>Text</type>
</CustomField>