force-app/main/default/objects/Line_Of_Billing__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <formula>((Total_Revenue__c - Total_Cost__c) / (Total_Revenue__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Sales_Revenue__c - Total_Cost__c) /  Sales_Revenue__c</inlineHelpText>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>