force-app/main/default/objects/Line_Of_Billing__c/fields/Margin_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Margin_Dollars__c</fullName>
    <formula>(Total_Revenue__c - Total_Cost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Margin = Revenue/Sales - Total Cost</inlineHelpText>
    <label>Margin Dollars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>