force-app/main/default/objects/Line_Of_Billing__c/fields/Oprid_Entrd__c.field-meta.xml
<CustomField>
    <fullName>Oprid_Entrd__c</fullName>
    <label>Oprid Entrd</label>
    <length>10</length>
    <type>Text</type>
</CustomField>