force-app/main/default/objects/Line_Of_Billing__c/fields/Order_Date_Entered__c.field-meta.xml
<CustomField>
    <fullName>Order_Date_Entered__c</fullName>
    <label>Order Date Entered</label>
    <type>Date</type>
</CustomField>