force-app/main/default/objects/Line_Of_Billing__c/fields/Order_Group__c.field-meta.xml
<CustomField>
    <fullName>Order_Group__c</fullName>
    <label>Order Group</label>
    <length>8</length>
    <type>Text</type>
</CustomField>