force-app/main/default/objects/Line_Of_Billing__c/fields/Order_Source__c.field-meta.xml
<CustomField>
    <fullName>Order_Source__c</fullName>
    <label>Order Source</label>
    <length>15</length>
    <type>Text</type>
</CustomField>