force-app/main/default/objects/Line_Of_Billing__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>