force-app/main/default/objects/Line_Of_Billing__c/fields/Previous_YTD_Cost__c.field-meta.xml
<CustomField>
    <fullName>Previous_YTD_Cost__c</fullName>
    <formula>IF(AND(YEAR(Invoice_Date__c)=YEAR(TODAY())-1,MONTH(Invoice_Date__c)&gt; 1),Total_Cost__c, 
IF(AND(YEAR(Invoice_Date__c)=YEAR(TODAY())-1,MONTH(Invoice_Date__c)=1),IF(MONTH(TODAY())=1,Total_Cost__c,0), 
IF(AND(YEAR(Invoice_Date__c)=YEAR(TODAY()),MONTH(Invoice_Date__c)=1),IF(MONTH(TODAY())&gt;1,Total_Cost__c,0),0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous YTD Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>