force-app/main/default/objects/Line_Of_Billing__c/fields/Previous_YTD_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Previous_YTD_Revenue__c</fullName>
    <description>IF(
AND(
YEAR( Inv_Date_Reporting__c ) = YEAR(TODAY()) - 1,
MONTH(Inv_Date_Reporting__c)&gt;= 1), 
Total_Revenue__c , 
IF ( 
AND (
YEAR(Inv_Date_Reporting__c)=YEAR(TODAY())-1,
MONTH(Inv_Date_Reporting__c)=1),
IF(MONTH(TODAY())=1,
Total_Revenue__c,
IF (MONTH (TODAY())&gt;1,0,0)),
0))</description>
    <formula>IF(AND(YEAR(Invoice_Date__c)=YEAR(TODAY())-1,MONTH(Invoice_Date__c)&gt; 1),Total_Revenue__c, 
IF(AND(YEAR(Invoice_Date__c)=YEAR(TODAY())-1,MONTH(Invoice_Date__c)=1),IF(MONTH(TODAY())=1,Total_Revenue__c,0), 
IF(AND(YEAR(Invoice_Date__c)=YEAR(TODAY()),MONTH(Invoice_Date__c)=1),IF(MONTH(TODAY())&gt;1,Total_Revenue__c,0),0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous YTD Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>