force-app/main/default/objects/Line_Of_Billing__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <description>Product Description</description>
    <label>Product Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>