force-app/main/default/objects/Line_Of_Billing__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>Product Id</label>
    <length>35</length>
    <type>Text</type>
</CustomField>