force-app/main/default/objects/Line_Of_Billing__c/fields/Raw_Cost__c.field-meta.xml
<CustomField>
    <fullName>Raw_Cost__c</fullName>
    <label>Raw Cost</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>