force-app/main/default/objects/Line_Of_Billing__c/fields/Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Rep_Name__c</fullName>
    <label>Rep Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>