force-app/main/default/objects/Line_Of_Billing__c/fields/RMA_Number__c.field-meta.xml
<CustomField>
    <fullName>RMA_Number__c</fullName>
    <label>RMA Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>