force-app/main/default/objects/Line_Of_Billing__c/fields/RMA_Type__c.field-meta.xml
<CustomField>
    <fullName>RMA_Type__c</fullName>
    <label>RMA Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>