force-app/main/default/objects/Line_Of_Billing__c/fields/Route_Code__c.field-meta.xml
<CustomField>
    <fullName>Route_Code__c</fullName>
    <label>Route Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>