force-app/main/default/objects/Line_Of_Billing__c/fields/SAP_Last_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>SAP_Last_Update_Date__c</fullName>
    <label>SAP Last Update Date</label>
    <type>Date</type>
</CustomField>