force-app/main/default/objects/Line_Of_Billing__c/fields/SDO_MOD_Flag__c.field-meta.xml
<CustomField>
    <fullName>SDO_MOD_Flag__c</fullName>
    <label>SDO MOD Flag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>