force-app/main/default/objects/Line_Of_Billing__c/fields/SDO_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>SDO_Unit_Number__c</fullName>
    <label>SDO Unit Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>