force-app/main/default/objects/Line_Of_Billing__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <length>12</length>
    <type>Text</type>
</CustomField>