force-app/main/default/objects/Line_Of_Billing__c/fields/Ship_From__c.field-meta.xml
<CustomField>
    <fullName>Ship_From__c</fullName>
    <label>Ship From</label>
    <length>10</length>
    <type>Text</type>
</CustomField>