force-app/main/default/objects/Line_Of_Billing__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <label>Ship To</label>
    <length>20</length>
    <type>Text</type>
</CustomField>