force-app/main/default/objects/Line_Of_Billing__c/fields/Ship_Via__c.field-meta.xml
<CustomField>
    <fullName>Ship_Via__c</fullName>
    <label>Ship Via</label>
    <length>6</length>
    <type>Text</type>
</CustomField>