force-app/main/default/objects/Line_Of_Billing__c/fields/Split_Bill_Flag__c.field-meta.xml
<CustomField>
    <fullName>Split_Bill_Flag__c</fullName>
    <label>Split Bill Flag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>