force-app/main/default/objects/Line_Of_Billing__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <length>150</length>
    <type>Text</type>
</CustomField>