force-app/main/default/objects/Line_Of_Billing__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <label>Unit Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>