force-app/main/default/objects/Line_Of_Billing__c/validationRules/Cannot_Edit_Line_Of_Billing_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Line_Of_Billing_Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Name) 
&amp;&amp;
NOT (ISNEW())</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Line of Billing Name cannot be editied</errorMessage>
</ValidationRule>